<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/camera">
		<ListPreference
			android:key="@string/settings_camera_resolutions"
			android:title="@string/settings_camera_resolutions"
			android:summary="@string/settings_camera_resolutions_hint" />	
		<de.hsrm.objectify.ui.SliderInputPreference
			android:key="@string/settings_amount_pictures"
			android:title="@string/settings_amount_pictures"
			android:dialogMessage="@string/settings_amount_pictures"
			android:text="@string/settings_suffix_pictures"
			android:summary="@string/settings_amount_pictures_hint" />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/reconstruction">
        <CheckBoxPreference
            android:key="@string/settings_use_blurring"
            android:title="@string/settings_use_blurring"
            android:summary="@string/settings_use_blurring_hint" />
    </PreferenceCategory>
</PreferenceScreen>
