<?xml version="1.0" encoding="utf-8"?>
<de.hsrm.objectify.ui.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:background="@drawable/background_noise"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button
		android:id="@+id/dashboard_gallery_button"
		android:drawableTop="@drawable/gallery_button_selector"
		android:text="@string/gallery"
		android:onClick="buttonClick"
		style="@style/DashboardButton" />
	<Button
		android:id="@+id/dashboard_howto_button"
		android:drawableTop="@drawable/howto_button_selector"
		android:text="@string/howto"
		android:onClick="buttonClick"
		style="@style/DashboardButton" />
	<Button
		android:id="@+id/dashboard_export_button"
		android:drawableTop="@drawable/export_button_selector"
		android:text="@string/export"
		android:onClick="buttonClick"
		style="@style/DashboardButton" />
	<Button
		android:id="@+id/dashboard_share_button"
		android:drawableTop="@drawable/share_button_selector"
		android:text="@string/share"
		android:onClick="buttonClick"
		style="@style/DashboardButton"/>
	<Button
		android:id="@+id/dashboard_camera_button"
		android:drawableTop="@drawable/camera_button_selector"
		android:background="#00000000"
		android:text="@string/camera"
		android:onClick="buttonClick"
		style="@style/DashboardButton"/>
</de.hsrm.objectify.ui.DashboardLayout>
