<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:layout_gravity="bottom|center_horizontal">
	<Button 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="actionControl"
		android:tag="texture"
		android:text="@string/textured"
		android:layout_weight="1"/>
	<Button 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="actionControl"
		android:tag="points"
		android:text="@string/points"
		android:layout_weight="1"/>
	<Button 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="actionControl"
		android:tag="wireframe"
		android:text="@string/wireframe"
		android:layout_weight="1"/>
</LinearLayout>
