<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical" 
	android:padding="10dip"
	android:background="@drawable/background_noise">
	<TextView
		android:id="@+id/about_text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/text_size_medium"
		android:text="@string/name_and_copyright"
		android:layout_marginBottom="6dip"
		style="@style/ShadowedText" />
	<TextView 
		android:id="@+id/about_explanation_third_party_sw"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:typeface="monospace"
		android:autoLink="web"
		android:textSize="@dimen/text_size_small"
		style="@style/ShadowedText"
		android:text="@string/explanation_third_party"/>
	<Button
		android:id="@+id/feedback_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/send_feedback" />
</LinearLayout>
