<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:padding="12dip"
	android:background="@drawable/background_noise">
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_gravity="center_vertical"
		android:textSize="@dimen/text_size_large"
		style="@style/ShadowedBlackText"
		android:text="@string/howto_step1"/>
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_gravity="center_vertical"
		android:textSize="@dimen/text_size_large"
		style="@style/ShadowedBlackText"
		android:text="@string/howto_step2"/>
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_gravity="center_vertical"
		android:textSize="@dimen/text_size_large"
		style="@style/ShadowedBlackText"
		android:text="@string/howto_step3"/>
</LinearLayout>
