<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/gallery_container"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	´	<ImageButton
			android:id="@+id/gallery_prev_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/back_button"
			android:background="#00000000"
			android:layout_gravity="bottom|center_vertical" />
		<ImageView
			android:id="@+id/gallery_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
		<ImageButton
			android:id="@+id/gallery_next_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/forward_button"
			android:background="#00000000"
			android:layout_gravity="bottom|center_vertical" />		
	</LinearLayout>
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/gallery_container"
		android:padding="10dip"
		android:stretchColumns="2">
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"
				android:text="@string/size" />
			<TextView
				android:id="@+id/gallery_size_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"
				android:text="@string/faces" />
			<TextView
				android:id="@+id/gallery_faces_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"
				android:text="@string/vertices" />
			<TextView
				android:id="@+id/gallery_vertices_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"
				android:text="@string/dimension" />
			<TextView
				android:id="@+id/gallery_dimension_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"
				android:text="@string/date" />
			<TextView
				android:id="@+id/gallery_date_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>
</RelativeLayout>
